# amplifier-module-tool-deepresearch

./: README.md  bundle.md  pyproject.toml
amplifier_module_tool_deepresearch/: __init__.py
examples/: bundle.md  deep-research-bundle.md
